# headless-marauder-gui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  FORWARD-PLAN.md  GUIDE.md  README.md  SECURITY.md  build.py  install.bat  install.sh  pyproject.toml  requirements.txt  uninstall.bat  uninstall.sh
.github/workflows/: build-release.yml  ci.yml
gui/: app.py  flasher_window.py
gui_qt/: app.py
marauder_core/: __init__.py  commands.py  flasher.py
suicide/: __init__.py
tests/: test_commands.py  test_flash_offset.py  test_flasher_security.py  test_parsing.py  test_version.py
tui/: app.py
web/: app.py
web/templates/: index.html
